--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "multer": "^1.4.0",
+    "pg-promise": "^8.4.6",
     "uuid": "^3.3.2"
   },
   "devDependencies": {},
