--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "multer": "^1.4.0",
     "pg-promise": "^8.4.6",
     "uuid": "^3.3.2"
