--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,11 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.3.0",
     "multer": "^1.4.0",
     "pg-promise": "^8.4.6",
+    "sharp": "^0.21.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {},
